--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,17 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+#api_status {
+    position: absolute;
+    transform: translateY(50%);
+    right: 30px;
+    margin-right: 30px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    background-color: #CCCCCC;
+}
+
+#api_status.available {
+    background-color: #FF545F;
+}
